UP-4424:  Prevent empty 'gaps' below the footer on tabs with zero or very short portlets in the tab/column hierarchy

--- a/uportal-war/src/main/webapp/media/skins/respondr/common/less/content.less
+++ b/uportal-war/src/main/webapp/media/skins/respondr/common/less/content.less
@@ -19,6 +19,11 @@
 
 @portletWrapperBorderRadius: 5px;
 
+#portalPageBody {
+    background-color: @content-background-color;
+    min-height: 300px;
+}
+
 /** Page Message for returned action messages */
 #portalPageBodyMessage {
     display: none;
