--- a/uportal-war/src/main/webapp/media/skins/respondr/common/less/tags.less
+++ b/uportal-war/src/main/webapp/media/skins/respondr/common/less/tags.less
@@ -17,7 +17,15 @@
  * under the License.
  */
 
-body {
+html {
+    min-height: 100%;
     background-color: @body-background-color; 
-    background-image: @body-background-image;
+
+    body {
+        background-image: @body-background-image;
+
+        #wrapper {
+            background-color: @body-background-color; 
+        }
+    }
 }
