--- a/uportal-war/src/main/webapp/media/skins/respondr/defaultSkin/less/variables.less
+++ b/uportal-war/src/main/webapp/media/skins/respondr/defaultSkin/less/variables.less
@@ -121,10 +121,6 @@
 
 @border: 1px solid @grayscale2;
 
-@body-background-color: @white;
-@body-background-image: url(./common/images/furley_bg.png);
-/* Using the furley pattern from http://subtlepatterns.com */
-
 /**
  * Link colors
  */
@@ -132,7 +128,12 @@
 @portal-link-hover-color: @color3-light;
 
 /**
- * Region Styles
+ * Main content Styles
+ */
+@content-background-color: @white;
+
+/**
+ * Region styles
  */
 @header-background-color: @color1;
 @header-text-color: @white;
@@ -143,6 +144,13 @@
 @footer-text-color: @color4;
 @footer-link-color: @color4-light;
 @footer-link-hover-color: @color4-lighter;
+
+/**
+ * Page-level styles
+ */
+@body-background-color: @footer-secondary-background-color;  // default to match footer-second;  prevents 'gaps' at the bottom of short pages
+@body-background-image: url(./common/images/furley_bg.png);
+/* Using the furley pattern from http://subtlepatterns.com */
 
 /**
  * User bar styles
